--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/xyznlp"
+  twitter          : "xyznlp"
   vine             :
   weibo            :
   xing             :
