--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=eUnK3msAAAAJ"
   email            : "xyz21thu@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
-  uri              :
+  uri              : "https://www.semanticscholar.org/author/Yuzhuang-Xu/2239055610"
   bitbucket        :
   codepen          :
   dribbble         :
